0.5.1	UNRELEASED

 BUG FIXES

  * Mark as compatible with Bazaar 2.2 (Jelmer Vernooij)

  * Use host specified rather than localhost in `bzr serve`.
    (David Coles, #543998)

  * Handle working trees without valid HEAD branch.
    (Jelmer Vernooij, #501385)

  * Default to non-bare repositories when initializing a control directory.
    (Jelmer Vernooij)

 PERFORMANCE
 
  * Avoid the use of InventoryDirectory.children. This speeds up 
    imports significantly. (Jelmer Vernooij)

0.5.0	2010-03-18

 BUG FIXES

  * Fix compatibility with newer versions of Python2.6, which change the 
    behaviour of urlparse.urlsplit.
 
  * Avoid storing texts of symlinks, which causes checksum errors in 
    `bzr check`. (#512323, INADA Naoki, Jelmer Vernooij)

  * Support committing to a git branch from a bzr working tree. (#506174,
	Jelmer Vernooij)

  * Support executable symlinks. (#512871, INADA Naoki, Jelmer Vernooij)

  * When unpacking URLs, strip leftmost slash to match gits 
    behaviour. (#445156, Jelmer Vernooij)

  * Support merging tags to a local Git repository.
    (#4445230, Jelmer Vernooij)

  * InterFromGitBranch.pull() supports an optional limit argument to limit
    how many revisions to import in one go. (Michael Hudson)

  * Cope with different encodings better, rather than just stripping out 
    unknown characters. (#529460, Jelmer Vernooij)

  * Support ``run_hooks`` argument to ``InterGitRemoteLocalBranch.pull()``.
    (#524843, Jelmer Vernooij)

  * Properly ignore directories when creating bundles, deal with new files.
    (#456849, Jelmer Vernooij)

 PERFORMANCE

  * Don't import head revision twice when pulling from Git.
    (Jelmer Vernooij)

 FEATURES

  * Support (dumb) HTTP repositories. (#373688, Jelmer Vernooij)

  * Implement API for colocated branches. (#380871, Jelmer Vernooij)

0.4.3	2010-01-19

 BUG FIXES

  * Fix warning about unclosed files on Windows. (#441978, INADA Naoki)
